add buttons and 3 labelled images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>cardealer</title>
+    <title>cardealer</title>\
 </head>
 <body>
     <header class="navbar">
@@ -14,8 +14,27 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+<img src="Img/carimg1.jpg"> 
+    <div class="shop">
+     <div>
+        <p>Electric cars</p>
+        <img src="Img/carelectric.jpg" alt="">
+         <button>SHOP NOW</button>
+     </div>
+
+      <div>
+       <p>Deisel cars</p>
+       <img src="Img/cardeisel.jpg" alt="">
+       <button>SHOP NOW</button>
+      </div>
+     
+
+      <div>
+         <p>Petrol cars</p>
+         <img src="Img/carpetrol.jpg" alt="">
+         <button>SHOP NOW</button> 
+      </div>
+     </div>
 </header>
-    
 </body>
 </html>
